fix(chip-group): use gap instead of margin and depreciate the align property

--- a/packages/lumx-core/src/scss/components/chip/_index.scss
+++ b/packages/lumx-core/src/scss/components/chip/_index.scss
@@ -135,22 +135,5 @@
 .#{$lumx-base-prefix}-chip-group {
     display: flex;
     flex-wrap: wrap;
-    margin: -$lumx-chip-group-spacing 0;
-
-    .#{$lumx-base-prefix}-chip {
-        margin: $lumx-chip-group-spacing 0;
-    }
-
-    &--align-left .#{$lumx-base-prefix}-chip {
-        margin-right: $lumx-chip-group-spacing * 2;
-    }
-
-    &--align-center .#{$lumx-base-prefix}-chip {
-        margin-right: $lumx-chip-group-spacing;
-        margin-left: $lumx-chip-group-spacing;
-    }
-
-    &--align-right .#{$lumx-base-prefix}-chip {
-        margin-left: $lumx-chip-group-spacing * 2;
-    }
+    gap: $lumx-chip-group-spacing * 2;
 }
