--- a/packages/lumx-core/src/scss/components/text-field/_index.scss
+++ b/packages/lumx-core/src/scss/components/text-field/_index.scss
@@ -138,7 +138,6 @@
             flex: 1 1 auto;
             width: auto;
             min-width: $lumx-text-field-min-width;
-            margin: $lumx-chip-group-spacing 0;
             line-height: var(--lumx-material-chip-size-s-height);
         }
 
