--- a/packages/lumx-core/src/scss/components/text-field/_mixins.scss
+++ b/packages/lumx-core/src/scss/components/text-field/_mixins.scss
@@ -140,10 +140,6 @@
     flex: 1 1 auto;
     flex-wrap: wrap;
     align-items: center;
-    margin: calc((var(--lumx-text-field-input-min-height) - var(--lumx-size-s) - 6px) / 2) 0;
-
-    .#{$lumx-base-prefix}-chip {
-        margin: $lumx-chip-group-spacing 0;
-        margin-right: $lumx-chip-group-spacing * 2;
-    }
+    margin: calc((var(--lumx-text-field-input-min-height) - var(--lumx-size-s) - 6px) / 2 + $lumx-chip-group-spacing) 0;
+    gap: $lumx-chip-group-spacing * 2;
 }
